app/src/viewcontrols/howtoplay/howtoplay.vc.less
// @import "main.less";

& {
    #platui > #media;
    #platui > #mixins;
    #platui > #variables;

    [plat-control="howtoplay-vc"] {

    }
}

@font-face {
    font-family: 'Roboto Condensed';
    src: url(../../fonts/Roboto/Roboto-Condensed.otf);
    src: url(../../fonts/Roboto/Roboto-Condensed.ttf);
    src: url(../../fonts/Roboto/Roboto-Condensed.woff); 
}
@font-face {
    font-family: 'Roboto Bold Condensed';
    src: url(../../fonts/Roboto/Roboto-BoldCondensed.otf);
    src: url(../../fonts/Roboto/Roboto-BoldCondensed.ttf);
    src: url(../../fonts/Roboto/Roboto-BoldCondensed.woff);
}
@font-face {
    font-family: 'WorkSans Regular';
    src: url(../../fonts/WorkSans/WorkSans-Regular.otf);
    src: url(../../fonts/WorkSans/WorkSans-Regular.ttf);
    src: url(../../fonts/WorkSans/WorkSans-Regular.woff);   
}
@font-face {
    font-family: 'WorkSans SemiBold';
    src: url(../../fonts/WorkSans/WorkSans-SemiBold.otf);
    src: url(../../fonts/WorkSans/WorkSans-SemiBold.ttf);
    src: url(../../fonts/WorkSans/WorkSans-SemiBold.woff);
}

@font-face {
    font-family: 'WorkSans ExtraBold';
    src: url(../../fonts/WorkSans/WorkSans-ExtraBold.otf);
    src: url(../../fonts/WorkSans/WorkSans-ExtraBold.ttf);
    src: url(../../fonts/WorkSans/WorkSans-ExtraBold.woff);
}
.howtoplay {
    color: #ffffff;
    height: 18em;
    background-size: cover;
    background-position: center;
    background-image: url('/images/howtoplay/how-to-play-hero.jpg');
    
    .banner {
        position: 30%;
    }
    
    h2 {
        font-size: 2.25em;
        color: white;
        text-align: center;
        font-family: WorkSans ExtraLight;
        padding-top: 4em;
    }
}

// .tabs-container {
//     margin-top: 1em;
//     border-bottom: 2px solid #c3c4c2;
//     text-align: center;
//     height: 2.25em;
//     padding: 0;

// }
.tabs {
    height: 3em;
    background-color: #eeefef;
    margin: auto;
    border-bottom: 2px solid #c3c4c2;
    
    
    .tabs-container {
        font-size: 1.5em;
        font-family: WorkSans SemiBold;
        text-align: center;
        .row {
            line-height: 2em;
            margin: 0 auto;
        }
        a {
            color: #a0a2a5;
        }
    }
}


.overview{
    background-color: #f1f2f2;
    margin-top: 5em;
    h2{
        color: @brand-tertiary;
        font-family: WorkSans ExtraBold;
        font-weight: bolder;
        font-size: 3em;
        text-align: center;
    }
    
    .overview-container {
        padding-bottom: 5em;
        margin-left: 15em;
        overflow: hidden;
    .item {
        display: inline-block;
        width: 80%; 
        h3 {
            display: inline-block;
            font-family: Roboto Condensed;
            color: #343434;
            text-align: left;
            font-size: 2em;
            padding-left: 3px;
            padding-top: 4px;
        }
    }
    
    p {
        color: #95989b;
        font-family: WorkSans Regular;
    }
        
    }
}

.overview-list-image {
    
    margin-top: 5em;
    margin-left: 5em;
    width: 80%;
    
    h3 {
        color: #2995c7;
        font-size: 3em;
        font-family: WorkSans ExtraBold;
        font-weight: bold;
    }
    color: @brand-tertiary;
}

.numberCircle {
    font-family: WorkSans;
    font-weight: bolder;
    display: inline-block;
    border-radius: 50%;
    width: 36px;
    height: 36px;
    // padding: 1em;
    background: #2995c7;
    color: white;
    text-align: center;
    line-height: 36px;
    font-size: 1em;
}

.subscription {
    
    background-color: white;
    img {
        margin-left: 10em;
    }
    
    .mail {
        margin-top: 3em;
        margin-right: 100px;
    
        .btn {
            background-color: #2b2c2e;
            margin-top: 1em;
            width: 50%;
            height: 4em;
            text-transform: uppercase;
            font-family: Roboto Condensed;
            letter-spacing: 2px;
            border-radius: 5px;
        }

        
        .email {
            
            .emailInput { 
                text-align: left;
                border: 1px solid #a6a8ab;
                border-radius: 5px;
                font-size: 1.5em;
                font-family: WorkSans Regular;
                background-color: #fff;
                color: #404042;
                height: 2em;
                width: 100%;            
            } 
        }
        
    }
    
    .text-container {
        text-align: left;
        margin-right: 100px;
    
        h3 {
            color: #3c3c3c;
            font-size: 2em;
            text-transform: uppercase;
            font-family: WorkSans ExtraBold;
        }
        
        h4 {
            font-family: WorkSans ExtraBold;
            font-size: 1.5em;
            color: #a0a2a5;
            font-weight: bolder;
            padding: 0;
            margin: 0 auto;
            display: block;
        }
    }
    
    #contests {
    margin-left: 10em;
    display: inline-block;
    margin-top: 2em;
    text-align: left;
    line-height: 2em;
    width: 80%;
        h5 {
            color: @brand-primary;
            font-family: WorkSans ExtraBold;
            font-weight: bolder;
            font-size: 1.5em;
        } 
        p {
            text-align: left;
            font-family: Roboto Condensed;
            font-weight: bold;
            color: #93979a;
            font-size: 1.5em;
            
        }
    }
}

.videos {
    background-color: #f1f2f2;
    .container {
        padding: 1em;
            h3 {
                margin-left: .5em;
                bottom: 0;
                font-size: 2em;
                font-family: Roboto Condensed;
                color: @brand-text;
            }
            
            .row {
                bottom: 10px;
            }
    }
}
        
.tile {
    margin: 10px;
    background-color: white;
    border-bottom: 2px solid #a0a2a5;
    height: 400px;
    
    img {
        width: 100%;
    }
    
    .description {
        
        text-align: left;
        font-family: WorkSans;
        margin-left: 20px;
        margin-right: 20px;

        h4 {
            color: @brand-primary;
            font-size: 2em;
            font-family: WorkSans ExtraBold;
        }

        p {
            height: 10px;
            color: @brand-text;
            font-family: WorkSans Regular;
            font-weight: 100;
            font-size: 1em;
        }
        
        .videos-button {
            width: 100%;
            position: absolute;
            bottom: 50px;
            margin-left: 10px;
        
            .button-neutral {
                color: white;
                background-color: #39393a;
                padding: 10px 10px;
                width: 80%;
                border: transparent;
                border-radius: 5px;
                text-transform: uppercase;
                font-size: 1em;
                font-family: WorkSans Regular;
            }
        }  
    }
}

